# Reconocimiento-Facial

./: CMakeLists.txt  compilar.bat  conanfile.txt  config.bat  config.sh  depurar.bat  pre_compilar.bat
algoritmos/: CMakeLists.txt
algoritmos/cnn/: CMakeLists.txt
algoritmos/cnn/src/: algo.cpp  algo.h
algoritmos/estimacionPuntosReferencia/: CMakeLists.txt
algoritmos/estimacionPuntosReferencia/src/: algo.cpp  algo.h
algoritmos/hog/: CMakeLists.txt
algoritmos/hog/src/: algo.cpp  algo.h
algoritmos/hogDLIB/: CMakeLists.txt
algoritmos/hogDLIB/src/: algo.cpp  algo.h
algoritmos/hogDetect/: CMakeLists.txt
algoritmos/hogDetect/src/: algo.cpp  algo.h
algoritmos/pca/: CMakeLists.txt
algoritmos/pca/src/: algo.cpp  algo.h
algoritmos/prewitt/: CMakeLists.txt
algoritmos/prewitt/src/: prewitt.cpp  prewitt.h
algoritmos/sobel/: CMakeLists.txt
algoritmos/sobel/src/: sobel.cpp  sobel.h
algoritmos/viola_jones/: CMakeLists.txt
algoritmos/viola_jones/src/: viola-jones.cpp  viola-jones.h
ejemplos/entrenamiento/: entrenamiento.txt  test.txt
ejemplos/entrenamiento/cfg/: coco.data  obj.names  objWIN.data  yolov3.cfg
herramientas/: CMakeLists.txt
herramientas/CLM-framework-master/: CMakeLists.txt
herramientas/CLM-framework-master/lib/local/CLM/: CMakeLists.txt
herramientas/CLM-framework-master/lib/local/CLM/include/: stdafx.h
herramientas/CLM-framework-master/lib/local/CLM/model/: mean.csv  std.csv
herramientas/CLM-framework-master/lib/local/CLM/src/: CLM.cpp  DetectionValidator.cpp  Patch_experts.cpp
herramientas/CLM-framework-master/lib/local/FaceAnalyser/: CMakeLists.txt
herramientas/CLM-framework-master/lib/local/FaceAnalyser/include/: FaceAnalyser.h
herramientas/CLM-framework-master/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp
herramientas/Deteccion-OPENCV/: CMakeLists.txt
herramientas/Deteccion-OPENCV/src/: img.cpp  img.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recursos.rc  ui_mainwindow.h
herramientas/Deteccion-OPENCV/src/GUI/: imgviewer.cpp  imgviewer.h  panelwidget.cpp  panelwidget.h
herramientas/Deteccion-OPENCV/src/eigenfaces/: eigenfaces.cpp  eigenfaces.h
herramientas/Deteccion-OPENCV/src/v&j/: viola_jones.cpp  viola_jones.h
herramientas/hog/: CMakeLists.txt
herramientas/hog/src/: hog.cpp  peopledetect.cpp  train_HOG.cpp
herramientas/recortador/: CMakeLists.txt
herramientas/recortador/src/: dialogoRecortador.cpp  dialogoRecortador.h  main.cpp  recursos.rc
herramientas/yolo/: CMakeLists.txt  CMakeLists_CUDA.txt  CMakeLists_noCUDA.txt  CMakeLists_noCUDA_noOPENMP.txt
herramientas/yolo/examples/: classifier.c  detector.c  go.c  regressor.c  segmenter.c
herramientas/yolo/pthreadW32/include/: pthread.h
herramientas/yolo/src/: activations.h  option_list.c  parser.c  utils.c
herramientas/yolo/src/sys/: getopt.h  time.cpp  time.inl  times.h  unistd.h
utilidades/: CMakeLists.txt
utilidades/controles/: CMakeLists.txt
utilidades/controles/visor/: CMakeLists.txt
utilidades/controles/visor/src/: selector.cpp  selector.h  visorwidget.cpp  visorwidget.h
utilidades/utils/: CMakeLists.txt
utilidades/utils/src/: utils.cpp  utils.h
vision/: CMakeLists.txt
vision/extra/: config.cfg
vision/src/: algoritmoPlugin.cpp  algoritmoPlugin.h  inicializar.cpp  inicializar.h  mainDialog.cpp  mainDialog.h  plugin.cpp  plugin.h  vision.cpp  vision.rc
vision/src/dll/: librerias.cpp  librerias.h
vision/src/utiles/: config.cpp  config.h  log.cpp  log.h  utilidades.h
