
MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()



list(APPEND VALIDOS "hog" )
list(APPEND VALIDOS "dlib-master" )
list(APPEND VALIDOS "CLM-framework-master" )
if(RECORTADOR)
	list(APPEND VALIDOS "recortador")
endif()
if(DETECTOPENCV)
	list(APPEND VALIDOS "Deteccion-OPENCV")
endif()
if(YOLO)
	list(APPEND VALIDOS "yolo")
endif() 

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
FOREACH(codigo ${SUBDIRS})
	list(FIND VALIDOS ${codigo} indice)
	IF(${indice} GREATER -1)
  		ADD_SUBDIRECTORY(${codigo})
  	ENDIF()
ENDFOREACH()
